--- a/public/adminMenu.html
+++ b/public/adminMenu.html
@@ -1,15 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Admin Menu Page</title>
+    <!-- font awesome -->
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+
+    <style>
+        table, th, td {
+          border:1px solid black;
+          font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+          font-size: large;
+        }
+    </style>
+        
+
+    <!-- swiper -->
+    <link
+        rel="stylesheet"
+        href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+    />
+    <!-- lightgallery -->
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css"
+    />
+    <!-- custom css -->
+    <link rel="stylesheet" href="/css/style.css" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+    <script src="/js/script.js"></script>
 </head>
 <body>
-    <h1>Admin Menu Page</h1>
-    <form action="/logout" method="POST">
-        <button>Logout</button>
-      </form>
+    <section class="header">
+        <a href="#" class="logo">
+            <i class="fas fa-ice-cream"></i> Gelato de creme
+        </a>
+
+        <nav class="navbar">
+            <a href="/adminIceCreamsMenu.html">Ice Creams Menu</a>
+        </nav>
+
+        <div id="menu-btn" class="fas fa-bars"></div>
+    </section>
+    <section>
+        <h1>Admin Options</h1>
+        <button onclick="showData()">Users List</button>
+        <div id="users" style="visibility: hidden;">
+        <table id="userstable" style="width:100%">
+            <tr>
+              <th>Full Name</th>
+              <th>Email</th>
+              <th>Admin</th>
+            </tr>
+          </table>
+        </div>
+        <form action="/logout" method="POST">
+            <button>Logout</button>
+        </form>
+    </section>
 </body>
 </html>
