added share bar

--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
 				<a href="">home</a>
 				<a href="">about</a>
 				<a href="">menu</a>
-				<a href="">gallery</a>
-				<a href="">reviews</a>
+				<!-- <a href="">gallery</a> -->
+				<!-- <a href="">reviews</a> -->
 				<a href="">order</a>
 				<a href="signup">sign up</a>
 				<a href="signin">sign in</a>
@@ -42,10 +42,24 @@
 
 			<div id="menu-btn" class="fas fa-bars"></div>
 		</section>
+
+
+		<!-- share -->
+		<div class="share-btn-container">
+			<a href="#" class="facebook-btn">
+				<i class="fab fa-facebook"></i>
+			</a>
+			<a href="#" class="twitter-btn">
+				<i class="fab fa-twitter"></i>
+			</a>
+			<a href="#" class="whatsapp-btn">
+				<i class="fab fa-whatsapp"></i>
+			</a>
+		</div>
 		<!-- header -->
 		<!-- home section -->
 
-		<section class="home" id="home">
+		<!-- <section class="home" id="home">
 			<div class="swiper home-slider">
 				<div class="swiper-wrapper">
 					<div
@@ -82,7 +96,7 @@
 				<div class="swiper-button-next"></div>
 				<div class="swiper-button-prev"></div>
 			</div>
-		</section>
+		</section> -->
 
 		<!-- home section -->
 
@@ -220,7 +234,7 @@
 
 		<!-- gallery -->
 
-		<section class="gallery" id="gallery">
+		<!-- <section class="gallery" id="gallery">
 			<h1 class="heading">our gallery</h1>
 
 			<div class="gallery-container">
@@ -264,12 +278,12 @@
 					<div class="icon"><i class="fas fa-plus"></i></div>
 				</a>
 			</div>
-		</section>
+		</section> -->
 		<!-- gallery -->
 
 		<!-- reviews -->
 
-		<section class="reviews" id="reviews">
+		<!-- <section class="reviews" id="reviews">
 			<h1 class="heading">reviews</h1>
 
 			<div class="swiper reviews-slider">
@@ -379,7 +393,7 @@
 
 				<div class="swiper-pagination"></div>
 			</div>
-		</section>
+		</section> -->
 
 		<!-- reviews -->
 
@@ -473,11 +487,11 @@
 					<p>+125-847-578</p>
 				</div>
 
-				<div class="icons">
+				<!-- <div class="icons">
 					<i class="fas fa-envelope"></i>
 					<h3>email</h3>
 					<a href="#" class="link">ninjashub@gmail.com</a>
-				</div>
+				</div> -->
 
 				<div class="icons">
 					<i class="fas fa-clock"></i>
@@ -489,16 +503,6 @@
 				</div>
 			</div>
 
-			<div class="share">
-				<a href="#" class="fab fa-facebook-f"></a>
-				<a href="#" class="fab fa-twitter"></a>
-				<a href="#" class="fab fa-instagram"></a>
-				<a href="#" class="fab fa-linkedin"></a>
-			</div>
-
-			<div class="credit">
-				created by <span>ninjashub</span> | all right reserved!
-			</div>
 		</section>
 
 		<!-- footer -->
