reservation completed commit

--- a/public/adminMenu.html
+++ b/public/adminMenu.html
@@ -42,6 +42,9 @@
 
         <nav class="navbar">
             <a href="/adminMenu/iceCreams">Ice Creams Menu</a>
+            <a href="/adminMenu/Stats">Stats Menu</a>
+            <a href="/logout">Log-Out</a>
+
         </nav>
 
         <div id="menu-btn" class="fas fa-bars"></div>
@@ -59,10 +62,6 @@
             </tr>
           </table>
         </div>
-        <form action="/logout" method="POST">
-            <br>
-            <button>Logout</button>
-        </form>
     </section>
 </body>
 </html>
