--- a/public/searchResults.html
+++ b/public/searchResults.html
@@ -53,7 +53,7 @@
         <br>
         <div id="iceCreams2" class="box-container" style="visibility: hidden; text-align: center;">
             <br>
-            <table id="iceCreamsTable2" style="width:100%">
+            <table id="iceCreamsTable2" style="width:100%; text-align: center;">
                 <tr>
                     <th>Name</th>
                     <th>Flavor</th>
