--- a/public/adminIceCreamsMenu.html
+++ b/public/adminIceCreamsMenu.html
@@ -42,6 +42,7 @@
 
         <nav class="navbar">
             <a href="/adminMenu">Menu</a>
+            <a href="/adminMenu/Stats">Ice Creams Menu</a>
         </nav>
 
         <div id="menu-btn" class="fas fa-bars"></div>
