--- a/public/cart.html
+++ b/public/cart.html
@@ -1,15 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Cart</title>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="/js/script.js"></script></head>
+    <title>User Menu Page</title>
+    <!-- font awesome -->
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+
+    <style>
+        table, th, td {
+          border:1px solid black;
+          font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+          font-size: large;
+        }
+    </style>
+        
+
+    <!-- swiper -->
+    <link
+        rel="stylesheet"
+        href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+    />
+    <!-- lightgallery -->
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css"
+    />
+    <!-- custom css -->
+    <link rel="stylesheet" href="/css/style.css" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+    <script src="/js/script.js"></script>
+</head>
 <body>
-<h1>Cart</h1>
-<button id="btn1" onclick="check()">Click Here to show content</button>
-<h1 id="text1">text</h1>
-<form action="/logout" method="POST">
-    <button>Logout</button>
-</form>
+    <section class="header">
+        <a href="/" class="logo">
+            <i class="fas fa-ice-cream"></i> Gelato de creme
+        </a>
+
+        <nav class="navbar">
+            <a href="/cancelOrder">Cancel Order</a>            
+            <a href="/reservationSelect">Continue Order</a>
+        </nav>
+
+        <div id="menu-btn" class="fas fa-bars"></div>
+    </section>
+    <section id="sec2" style="text-align: center; align-items: center;">
+        <button onclick="selectedIceCreamsDisplay()" id="btnSec2">Click To Show Selected Ice Creams</button>
+    </section>
+    <section style="text-align: center;">
+        <form action="/finishOrder" method="post">
+            <button style="visibility: hidden; background-color: aquamarine; border-radius: 5px; border-color:white;	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); font-size: x-large;" id="btnFinishOrder">Order</button>
+        </form>
+    </section>
 </body>
 </html>
