--- a/public/adminMenu.html
+++ b/public/adminMenu.html
@@ -50,8 +50,7 @@
         <div id="menu-btn" class="fas fa-bars"></div>
     </section>
     <section>
-        <h1>Admin Options</h1>
-        <button id="btnShow" onclick="showData()">Users List</button>
+        <h1 onclick="showData()" class="heading">Users List</h1>
         <div id="users" style="visibility: hidden;text-align: center;">
         <br>
         <table id="userstable" style="width:100%">
