--- a/public/statsAdmin.html
+++ b/public/statsAdmin.html
@@ -52,120 +52,9 @@
 		</section>
 
 		<section>
-			<h1 style="text-align: center">Graph Will Be here</h1>
+			<h1 style="text-align: center" id="head" class="heading">Graph Will Be here</h1>
+            <button style="text-align: center;" onclick="graph1()">Show Stats</button>
 			<div class="graphDiv" id="d3-container"></div>
 		</section>
-		<script>
-			const data = [
-				{ name: "John", score: 80 },
-				{ name: "Simon", score: 76 },
-				{ name: "Samantha", score: 90 },
-				{ name: "Patrick", score: 82 },
-				{ name: "Mary", score: 90 },
-				{ name: "Christina", score: 75 },
-				{ name: "Michael", score: 86 },
-			]
-
-			const width = 900
-			const height = 450
-			const margin = { top: 50, bottom: 50, left: 50, right: 50 }
-
-			const svg = d3
-				.select("#d3-container")
-				.append("svg")
-				.attr("width", width - margin.left - margin.right)
-				.attr("height", height - margin.top - margin.bottom)
-				.attr("viewBox", [0, 0, width, height])
-
-			const x = d3
-				.scaleBand()
-				.domain(d3.range(data.length))
-				.range([margin.left, width - margin.right])
-				.padding(0.1)
-
-			const y = d3
-				.scaleLinear()
-				.domain([0, 100])
-				.range([height - margin.bottom, margin.top])
-
-			svg
-				.append("g")
-				.attr("fill", "royalblue")
-				.selectAll("rect")
-				.data(data.sort((a, b) => d3.descending(a.score, b.score)))
-				.join("rect")
-				.attr("x", (d, i) => x(i))
-				.attr("y", (d) => y(d.score))
-				.attr("title", (d) => d.score)
-				.attr("class", "rect")
-				.attr("height", (d) => y(0) - y(d.score))
-				.attr("width", x.bandwidth())
-
-			function yAxis(g) {
-				g.attr("transform", `translate(${margin.left}, 0)`)
-					.call(d3.axisLeft(y).ticks(null, data.format))
-					.attr("font-size", "20px")
-			}
-
-			function xAxis(g) {
-				g.attr("transform", `translate(0,${height - margin.bottom})`)
-					.call(d3.axisBottom(x).tickFormat((i) => data[i].name))
-					.attr("font-size", "20px")
-			}
-
-			svg.append("g").call(xAxis)
-			svg.append("g").call(yAxis)
-			svg.node()
-		</script>
-
-		<section>
-			<h1 style="text-align: center">Pie Chart Will Be here</h1>
-			<div class="graphDiv" id="d3-container-pieDiv"></div>
-		</section>
-		<script>
-			var dataPie = [10, 50, 80]
-			var r = 300
-
-			var color = d3.scale.ordinal().range(["red", "blue", "orange"])
-
-			var canvas = d3
-				.select("#d3-container-pieDiv")
-				.append("svg")
-				.attr("witdh", 1500)
-				.attr("height", 1500)
-
-			var group = canvas.append("g").attr("transform", "translate(300, 300)")
-
-			var arc = d3.svg.arc().innerRadius(200).outerRadius(r)
-
-			var pie = d3.layout.pie().value(function (d) {
-				return d
-			})
-
-			var arcs = group
-				.selectAll(".arc")
-				.data(pie(dataPie))
-				.enter()
-				.append("g")
-				.attr("class", "arc")
-
-			arcs
-				.append("path")
-				.attr("d", arc)
-				.atrr("fill", function (d) {
-					return color(d.dataPie)
-				})
-
-			arcs
-				.append("text")
-				.attr("transform", function (d) {
-					return "translate(" + arc.centroid(d) + ")"
-				})
-				.attr("text-anchor", "middle")
-				.atrr("font-size", "1.5em")
-				.text(function (d) {
-					return d.dataPie
-				})
-		</script>
 	</body>
 </html>
