--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,6 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
 		/>
-		<!-- swiper -->
-		<link
-			rel="stylesheet"
-			href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
-		/>
 		<!-- lightgallery -->
 		<link
 			rel="stylesheet"
@@ -30,12 +25,9 @@
 			</a>
 
 			<nav class="navbar">
-				<a href="">home</a>
-				<a href="">about</a>
-				<a href="">menu</a>
-				<!-- <a href="">gallery</a> -->
-				<!-- <a href="">reviews</a> -->
-				<a href="">order</a>
+				<a href="#about">home</a>
+				<a href="#menu">menu</a>
+				<a href="#contact">contact us</a>
 				<a href="signup">sign up</a>
 				<a href="signin">sign in</a>
 			</nav>
@@ -56,48 +48,6 @@
 				<i class="fab fa-whatsapp"></i>
 			</a>
 		</div>
-		<!-- header -->
-		<!-- home section -->
-
-		<!-- <section class="home" id="home">
-			<div class="swiper home-slider">
-				<div class="swiper-wrapper">
-					<div
-						class="swiper-slide slide"
-						style="background: url(/images/header-1.png) no-repeat"
-					>
-						<div class="content">
-							<h3>do you know how pleasure tastes?</h3>
-							<a href="" class="btn">get started</a>
-						</div>
-					</div>
-
-					<div
-						class="swiper-slide slide"
-						style="background: url(/images/header-2.png) no-repeat"
-					>
-						<div class="content">
-							<h3>do you know how pleasure tastes?</h3>
-							<a href="#" class="btn">get started</a>
-						</div>
-					</div>
-
-					<div
-						class="swiper-slide slide"
-						style="background: url(//images/header-3.png) no-repeat"
-					>
-						<div class="content">
-							<h3>do you know how pleasure tastes?</h3>
-							<a href="#" class="btn">get started</a>
-						</div>
-					</div>
-				</div>
-
-				<div class="swiper-button-next"></div>
-				<div class="swiper-button-prev"></div>
-			</div>
-		</section> -->
-
 		<!-- home section -->
 
 		<!-- about us -->
@@ -107,24 +57,20 @@
 
 			<div class="row">
 				<div class="image">
-					<img src="/images/aboutus.png" alt="" />
+					<img src="/images/iceCreamAboutUs.jpg" alt="" />
 				</div>
-
 				<div class="content">
 					<h3>home made ice creams for you</h3>
 					<p>
-						Nemo Enim Ipsam Voluptatem Quia Voluptas Sit Aspernatur Aut Odit Aut
-						Fugit, Sed Quia Consequuntur Magni Quis Nostrud Exercitation Commodo
-						Volutpat A, Convallis Ac, Laoreet Enim. Phasellus Fermentum In, Dolor.
-						Pellentesque Facilisis. Nulla Imperdiet Sit Amet Magna
+						Welcome to Gelato de Creme.</br>
+						we believe in creating the best ice cream in israel since 2022.</br>
 					</p>
 					<p>
-						Aliquam Erat Ac Ipsum. Integer Aliquam Purus. Quisque Lorem Tortor
-						Fringilla Sed, Vestibulum Id, Eleifend Justo Vel Bibendum Sapien Massa Ac
-						Turpis Faucibus Orci Luctus Non, Consectetuer Lobortis Quis, Varius In,
-						Purus. Integer Ultrices Posuere Cubilia Curae, Nulla Ipsum Dolor Lacus,
-						Suscipit Adipiscing. Quisque Lorem Tortor Fringilla Sed, Vestibulum Id,
-						Eleifend Justo.
+						The story behind each ice cream begins with the preparation of the raw materials we use in yuval's basment located near the college of managemnt. A green and magical place, where the factory team together with the development team, work diligently every day on the preparation of our ice cream ingredients and all of course, made in blue and white.
+						The raw materials we produce with great skill start with the ice cream bases, which we prepare fresh in our factory. We produce a wide variety of rich creams that combine pistachios, almonds, nuts that we roast using unique technologies in our factory and more. They give the ice cream the winning textural combination of softness and crunchiness.
+						All the favorite ice cream ingredients are sent together to Gelato De Creme branches every day to make the favorite ice cream.
+
+
 					</p>
 				</div>
 			</div>
@@ -232,239 +178,18 @@
 
 		<!-- menu -->
 
-		<!-- gallery -->
+		<!-- contact us -->
 
-		<!-- <section class="gallery" id="gallery">
-			<h1 class="heading">our gallery</h1>
-
-			<div class="gallery-container">
-				<a href="/images/gallery1.jpg" class="box">
-					<img src="/images/gallery1.jpg" alt="" />
-					<div class="icon"><i class="fas fa-plus"></i></div>
-				</a>
-
-				<a href="/images/gallery2.jpg" class="box">
-					<img src="/images/gallery2.jpg" alt="" />
-					<div class="icon"><i class="fas fa-plus"></i></div>
-				</a>
-
-				<a href="/images/gallery3.jpg" class="box">
-					<img src="/images/gallery3.jpg" alt="" />
-					<div class="icon"><i class="fas fa-plus"></i></div>
-				</a>
-
-				<a href="/images/gallery4.jpg" class="box">
-					<img src="/images/gallery4.jpg" alt="" />
-					<div class="icon"><i class="fas fa-plus"></i></div>
-				</a>
-
-				<a href="/images/gallery5.jpg" class="box">
-					<img src="/images/gallery5.jpg" alt="" />
-					<div class="icon"><i class="fas fa-plus"></i></div>
-				</a>
-
-				<a href="/images/gallery6.jpg" class="box">
-					<img src="/images/gallery6.jpg" alt="" />
-					<div class="icon"><i class="fas fa-plus"></i></div>
-				</a>
-
-				<a href="/images/gallery7.jpg" class="box">
-					<img src="images/gallery7.jpg" alt="" />
-					<div class="icon"><i class="fas fa-plus"></i></div>
-				</a>
-
-				<a href="/images/gallery8.jpg" class="box">
-					<img src="/images/gallery8.jpg" alt="" />
-					<div class="icon"><i class="fas fa-plus"></i></div>
-				</a>
-			</div>
-		</section> -->
-		<!-- gallery -->
-
-		<!-- reviews -->
-
-		<!-- <section class="reviews" id="reviews">
-			<h1 class="heading">reviews</h1>
-
-			<div class="swiper reviews-slider">
-				<div class="swiper-wrapper">
-					<div class="swiper-slide slide">
-						<p>
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere velit, a
-							iste, tempora nisi eveniet expedita similique explicabo consequatur
-							quaerat odio quibusdam nobis. Quaerat quas, incidunt tenetur ad a ab.
-						</p>
-						<img src="/images/review-1.png" alt="" />
-						<h3>marie joe</h3>
-						<div class="stars">
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star-half-alt"></i>
-						</div>
-					</div>
-
-					<div class="swiper-slide slide">
-						<p>
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere velit, a
-							iste, tempora nisi eveniet expedita similique explicabo consequatur
-							quaerat odio quibusdam nobis. Quaerat quas, incidunt tenetur ad a ab.
-						</p>
-						<img src="/images/review-2.png" alt="" />
-						<h3>marie joe</h3>
-						<div class="stars">
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star-half-alt"></i>
-						</div>
-					</div>
-
-					<div class="swiper-slide slide">
-						<p>
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere velit, a
-							iste, tempora nisi eveniet expedita similique explicabo consequatur
-							quaerat odio quibusdam nobis. Quaerat quas, incidunt tenetur ad a ab.
-						</p>
-						<img src="/images/review-3.png" alt="" />
-						<h3>marie joe</h3>
-						<div class="stars">
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star-half-alt"></i>
-						</div>
-					</div>
-
-					<div class="swiper-slide slide">
-						<p>
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere velit, a
-							iste, tempora nisi eveniet expedita similique explicabo consequatur
-							quaerat odio quibusdam nobis. Quaerat quas, incidunt tenetur ad a ab.
-						</p>
-						<img src="/images/review-4.png" alt="" />
-						<h3>marie joe</h3>
-						<div class="stars">
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star-half-alt"></i>
-						</div>
-					</div>
-
-					<div class="swiper-slide slide">
-						<p>
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere velit, a
-							iste, tempora nisi eveniet expedita similique explicabo consequatur
-							quaerat odio quibusdam nobis. Quaerat quas, incidunt tenetur ad a ab.
-						</p>
-						<img src="/images/review-5.png" alt="" />
-						<h3>marie joe</h3>
-						<div class="stars">
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star-half-alt"></i>
-						</div>
-					</div>
-
-					<div class="swiper-slide slide">
-						<p>
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere velit, a
-							iste, tempora nisi eveniet expedita similique explicabo consequatur
-							quaerat odio quibusdam nobis. Quaerat quas, incidunt tenetur ad a ab.
-						</p>
-						<img src="/images/review-6.png" alt="" />
-						<h3>marie joe</h3>
-						<div class="stars">
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star"></i>
-							<i class="fas fa-star-half-alt"></i>
-						</div>
-					</div>
-				</div>
-
-				<div class="swiper-pagination"></div>
-			</div>
-		</section> -->
-
-		<!-- reviews -->
-
-		<!-- order -->
-
-		<section class="order" id="order">
-			<h1 class="heading">order now</h1>
-
-			<form action="">
-				<div class="box-container">
-					<div class="box">
-						<div class="inputBox">
-							<span>full name</span>
-							<input type="text" placeholder="enter your name" />
-						</div>
-
-						<div class="inputBox">
-							<span>ice cream name</span>
-							<input type="text" placeholder="ice cream you want" />
-						</div>
-
-						<div class="inputBox">
-							<span>order details</span>
-							<input type="text" placeholder="topings" />
-						</div>
-
-						<div class="inputBox">
-							<span>your address</span>
-							<textarea
-								name=""
-								placeholder="enter your address"
-								cols="30"
-								rows="10"
-							></textarea>
-						</div>
-					</div>
-
-					<div class="box">
-						<div class="inputBox">
-							<span>phone number</span>
-							<input type="number" placeholder="enter your phone number" />
-						</div>
-
-						<div class="inputBox">
-							<span>quantity</span>
-							<input type="number" placeholder="how many you want" />
-						</div>
-
-						<div class="inputBox">
-							<span>when you want</span>
-							<input type="datetime-local" />
-						</div>
-
-						<div class="inputBox">
-							<span>our address</span>
-							<iframe
-								class="map"
-								src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6769.348130129169!2d34.76840928196907!3d31.969737915165094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502b3f5eb44e1c1%3A0xfbe9b8c6bce59319!2sCollege%20of%20Management%20Academic%20Studies!5e0!3m2!1sen!2sil!4v1660141977129!5m2!1sen!2sil"
-								;
-								allowfullscreen=""
-								loading="lazy"
-								referrerpolicy="no-referrer-when-downgrade"
-							></iframe>
-						</div>
-					</div>
-				</div>
-				<input type="submit" value="order now" class="btn" />
+		<section class="contact" id="contact">
+			<h1 class="heading">Contact Us</h1>
+			<form action="https://formspree.io/f/xwkzkybo" method="POST">
+				<input type="text" name="name" id="name" placeholder="Enter your name" >
+				<input type="email" name="email" id="emailForm" placeholder="Enter your email" required>
+				<input type="text" name="phone" id="phone" placeholder="Enter your Phone no." >
+				<textarea id="message" name="message" rows="4" placeholder="Enter your message"></textarea>
+				<button type="Submit" value="send">Send</button>
 			</form>
 		</section>
-
-		<!-- order -->
 
 		<!-- footer -->
 
@@ -473,32 +198,32 @@
 				<div class="icons">
 					<i class="fas fa-map"></i>
 					<h3>address</h3>
-					<p>
-						Elie Wiesel St 2 <br />
-						Rishon LeTsiyon <br />
-						Israel
-					</p>
+						<iframe
+							class="map"
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6769.348130129169!2d34.76840928196907!3d31.969737915165094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502b3f5eb44e1c1%3A0xfbe9b8c6bce59319!2sCollege%20of%20Management%20Academic%20Studies!5e0!3m2!1sen!2sil!4v1660141977129!5m2!1sen!2sil"
+							;
+							allowfullscreen=""
+							loading="lazy"
+							referrerpolicy="no-referrer-when-downgrade"
+						></iframe>
+						<p>
+							Elie Wiesel St 2, Rishon LeTsiyon,  Israel
+						</p>
 				</div>
 
 				<div class="icons">
 					<i class="fas fa-phone"></i>
 					<h3>phone</h3>
-					<p>+125-847-578</p>
-					<p>+125-847-578</p>
+					<p>03-333-3333</p>
+					<p>07-777-7777</p>
 				</div>
-
-				<!-- <div class="icons">
-					<i class="fas fa-envelope"></i>
-					<h3>email</h3>
-					<a href="#" class="link">ninjashub@gmail.com</a>
-				</div> -->
 
 				<div class="icons">
 					<i class="fas fa-clock"></i>
 					<h3>opening hours</h3>
 					<p>
-						monday - friday: 2:00 - 12:00 <br />
-						Saturday: 2:00 - 11:00
+						Sunday - Thursday : 9:00 - 22:00 <br />
+						Friday: 9:00 - 11:00
 					</p>
 				</div>
 			</div>
@@ -506,9 +231,6 @@
 		</section>
 
 		<!-- footer -->
-
-		<!-- swiper -->
-		<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
 		<!-- lightgallery -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
@@ -519,5 +241,6 @@
 		<script>
 			lightGallery(document.querySelector(".gallery .gallery-container"))
 		</script>
+
 	</body>
 </html>
