--- a/public/searchResults.html
+++ b/public/searchResults.html
@@ -49,9 +49,11 @@
     </section>
     <section>
         <br>
-        <button onclick="searchIceCreamsList2()" id="click">Click Me To Show Results</button>
+        <button onclick="searchIceCreamsList2()">Click Me To Show Results</button>
         <br>
         <div id="iceCreams2" class="box-container" style="visibility: hidden; text-align: center;">
+            <br>
+            <h1 class="heading" id="SearchParam"></h1>
             <br>
             <table id="iceCreamsTable2" style="width:100%; text-align: center;">
                 <tr>
@@ -59,6 +61,8 @@
                     <th>Flavor</th>
                     <th>Quantity</th>
                     <th>Price</th>
+                    <th>Photo</th>
+                    <th>Times Ordered</th>
                 </tr>
               </table>
             </div>
