--- a/public/statsAdmin.html
+++ b/public/statsAdmin.html
@@ -46,6 +46,7 @@
 			<nav class="navbar">
 				<a href="/adminMenu">Menu</a>
 				<a href="/adminMenu/iceCreams">Ice Creams Menu</a>
+				<a href="/logout">Log-Out</a>
 			</nav>
 
 			<div id="menu-btn" class="fas fa-bars"></div>
