recommended history commit

--- a/public/wrongQuantity.html
+++ b/public/wrongQuantity.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Oops! Ordered Too Much Try Again!!</h1>
-    <meta http-equiv="refresh" content="2;url=http://localhost:8081/reservationSelect">
+    <meta http-equiv="refresh" content="2;url=http://localhost:8081/userMenu">
 </body>
 </html>
