--- a/public/signUp.html
+++ b/public/signUp.html
@@ -50,21 +50,26 @@
 					<div class="box">
 						<div class="inputBox">
 							<span>Full-Name</span>
-							<input type="text" name="fullname"  placeholder="enter your full-name" />
+							<input type="text" id="signUpFullName" name="fullname"  placeholder="enter your full-name" />
+							<h1 id="fullnameError" style="color: red; visibility: hidden;"></h1>
+							<br>
 						</div>
-
+						
 						<div class="inputBox">
 							<span>email</span>
-							<input type="text" name="email" placeholder="enter your email" />
+							<input type="text" id="signUpEmail" name="email" placeholder="enter your email" />
+							<h1 id="wrongEmail" style="color: red; visibility: hidden;">*wrong Email</h1>
 						</div>
 
 						<div class="inputBox">
 							<span>password</span>
-							<input type="password" id="password" name="password" placeholder="enter your password" />
+							<input type="password" id="passwordSignUp" name="password" placeholder="enter your password" />
+							<h1 id="wrongPassword" style="color: red; visibility: hidden;">*wrong Password</h1>
 						</div>
 					</div>
 				</div>
-				<input type="submit" value="sign up" class="btn"/>
+				<input type="submit" onclick="checkSignUp()" value="sign up" class="btn"/>
+				<h1 id="PressAgain" style="color: red; visibility: hidden;">*</h1>
 			</form>
 		</section>
 	</body>
