change Pass and Profile

--- a/public/cart.html
+++ b/public/cart.html
@@ -36,13 +36,13 @@
 </head>
 <body>
     <section class="header">
-        <a href="/" class="logo">
+        <a href="/userMenu" class="logo">
             <i class="fas fa-ice-cream"></i> Gelato de creme
         </a>
 
         <nav class="navbar">
             <a href="/cancelOrder">Cancel Order</a>            
-            <a href="/reservationSelect">Continue Order</a>
+            <a href="/userMenu">Continue Order</a>
         </nav>
 
         <div id="menu-btn" class="fas fa-bars"></div>
