--- a/public/changePassword.html
+++ b/public/changePassword.html
@@ -43,23 +43,26 @@
         <nav class="navbar">
             <a href="/userMenu">Order</a>
             <a href="/cart">Cart</a>
-            <a href="/changePassword">Change Password</a>
-            <a href="/logout">Log-Out</a>
-        
+            <a href="/logout">Log-Out</a> 
         </nav>
 
         <div id="menu-btn" class="fas fa-bars"></div>
     </section>
     <section class="order" id="order">
-        <h1 class="heading" onclick="profileInfo()">My Profile</h1>
-        <div class='card1' id="proDiv" style="visibility: hidden;">
-            <div class='container1' id="pdivP">
-                <h1 id="profileName">
-                    <b></b>
-                </h1>
-                <p id="profileEmail"></p>
-            </div>
-        </div>
+        <h1 class="heading">Change Password</h1>
+        <form action="/changePassword" method="POST">
+            <div class="box-container">
+                <div class="box">
+                <div class="inputBox">
+                    <span>Enter Password</span>
+                    <input type="password" name="pass" placeholder="enter password" />
+                </div>
+                <div class="inputBox">
+                    <span>Re-Enter Password</span>
+                    <input type="password" name="repass" placeholder="re-enter password" />
+                </div>
+            </form>
+            <input type="submit" value="Update" class="btn"/>        
     </section>
 </body>
 </html>
