--- a/public/userMenu.html
+++ b/public/userMenu.html
@@ -50,8 +50,8 @@
         <div id="menu-btn" class="fas fa-bars"></div>
     </section>
     <section id="order" class="order">
-        <h1 class="heading">We Know A Little Bit About You...</h1>
-        <h2 onclick="recommend()" id="toShowHistroy" class="heading">Click To Show</h2>
+        <h1 class="heading">We May Know A Little Bit About You...</h1>
+        <h2 onclick="recommend()" id="toShowHistroy" class="heading">Click To Find What Do We Know</h2>
         <h2 style="font-size: x-large;text-align: center;">According To Your History We Recommend You To Search Again:</h2>
         <h2 style="font-size: x-large;text-align: center;" id="historyFlavor"></h2>
         <h2 style="font-size: x-large;text-align: center;" id="historyName"></h2>
